# genom

./: CMakeLists.txt  Doxyfile  Doxyfile.in  Matrix.cpp  Matrix.hpp  README.md  Sequence.cpp  Sequence.hpp  getPosition_test.cpp  getProbability_test.cpp  loadfile.cpp  propositions  qt.sh  stringcompare.cpp  students  todo.txt
Archives/: CMakeLists.txt Debug  Commentary_Example.cpp  Commentary_Example.hpp  SequenceTest.cpp  Style_file.hpp  compute_logMatrix_test.cpp  findstartingpos.cc  getProbability_test.cpp  loadfile.cpp  propositions  students
QT/: MyClasses.pro  main.cpp  window.cpp  window.h  window.hpp  window.ui
logo/: logo_main.cpp  logo_main.hpp
src/: Matrix.cpp  Matrix.hpp  Matrix.hpp~  Sequence.cpp  Sequence.hpp  askBaseProb.cpp  askBaseProb.hpp  askBaseProb.ui  askBaseProb.ui.autosave  askBaseProbability.cpp  askBaseProbability.hpp  askBaseProbability.ui  askBool.cpp  askBool.hpp  askBool.ui  askDouble.cpp  askDouble.hpp  askDouble.ui  askPosAndLength.cpp  askPosAndLength.hpp  askPosAndLength.ui  askbaseprobability.cpp  askdouble.cpp  askdouble.hpp  askdouble.ui  askposandlength.cpp  correlate.cpp  correlate.hpp  correlate.ui  correlate.ui.autosave  genom-2.pro  genomic_coordinates.cpp  genomic_coordinates.hpp  logo.hpp  main.cpp  mainQt.cpp  matrixFromSequence.cpp  matrixFromSequence.hpp  matrixFromSequence.ui  matrixFromSequence.ui.autosave  (+36 more)
test/: compute_logMatrix_test.cpp  findstartingpos_test.cc  gTest.cpp  gtestsequence.cpp
